test/langtools/tools/javac/localmethods/finder/NativeMethodTest.out
NativeMethodTest.java:11:25: compiler.warn.method.could.be.declared.local: main(java.lang.String[]), kindname.class, NativeMethodTest
- compiler.err.warnings.and.werror
1 error
1 warning
